Fix desktop release build